# gpuser-backend

./: .env.example  .gitignore  README.md  database.sh  pyproject.toml
config/: settings.py  urls.py
gpuser/: admin.py  ap_scheduler.py  apps.py  models.py  urls.py  views.py
gpuser/migrations/: 0001_initial.py
scripts/: server.py
static/gpu_status/: style.css
templates/: gpu_status.html
