[tool.poetry]
name = "gpuser"
version = "0.1.0"
description = ""
authors = ["t-ohtsuka89 <102138393+t-ohtsuka89@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"
psycopg2-binary = "^2.9.5"
paramiko = "^2.12.0"
apscheduler = "^3.9.1.post1"
django-cors-headers = "^3.13.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "scripts.server:main"
